<?xml version="1.0" encoding="utf-8"?>
<rutinas>
    <momento
        id="1"
        titulo="Buenos días"
        hora="7:00"
        contenido_ref="@string/angelus" />

    <momento
        id="2"
        titulo="Evangelio del día"
        hora="7:30"
        contenido_ref="@string/evangelio_de_dia" />

    <momento
        id="3"
        titulo="Desayuno"
        hora="8:00"
        contenido_ref="@string/bendicion_alimentos" />

    <momento
        id="4"
        titulo="Mediodia"
        hora="12:00"
        contenido_ref="@string/angelus" />

    <momento
        id="5"
        titulo="Comida"
        hora="14:00"
        contenido_ref="@string/bendicion_alimentos" />

    <momento
        id="6"
        titulo="Rosario"
        hora="16:15"
        contenido_ref="@string/rosario" />

    <momento
        id="7"
        titulo="Cena"
        hora="20:00"
        contenido_ref="@string/bendicion_alimentos" />

    <momento
        id="8"
        titulo="ORaciones de la noche"
        hora="2300"
        contenido_ref="@string/noche_contenido" />

</rutinas>